--- a/local/code/html/architecture.html
+++ b/local/code/html/architecture.html
@@ -332,7 +332,8 @@
     </div>
 
     <footer>
-        <a href="/save?data=FromArchitecture&template=default">Default</a>
+        <a href="/">Home</a>
+        <a href="/save?data=FromArchitecture&template=default">Design</a>
         <a href="/save?data=FromArchitecture&template=space">Space</a>
         <a href="/save?data=FromArchitecture&template=webgl">WebGL</a>
         <a href="/save?data=FromArchitecture&template=architecture" style="color: var(--accent)">Architecture</a>
