--- a/local/code/html/space.html
+++ b/local/code/html/space.html
@@ -134,6 +134,7 @@
         </div>
 
         <div class="meta">
+            <span><a href="/" style="color: #aaa; text-decoration: none;">HOME</a></span>
             <span>Owner: {{OWNER}}</span>
             <span><a href="/save?data={{DATA}}&template=architecture" style="color: #aaa; text-decoration: none;">VIEW
                     ARCHITECTURE</a></span>
