--- a/local/code/html/webgl.html
+++ b/local/code/html/webgl.html
@@ -199,7 +199,10 @@
     </main>
 
     <footer>
-        <div>Python Backend · Owned by {{OWNER}}</div>
+        <div>
+            <a href="/" style="color: rgba(255,255,255,0.8); margin-right: 20px; text-decoration: none;">HOME</a>
+            Python Backend · Owned by {{OWNER}}
+        </div>
         <div><a href="/save?data={{DATA}}&template=architecture"
                 style="color: rgba(255,255,255,0.8); margin-right: 20px;">ARCHITECTURE</a> {{TIMESTAMP}}</div>
     </footer>
