push more change
push more change

--- a/local/code/html/landing.html
+++ b/local/code/html/landing.html
@@ -384,6 +384,10 @@
                 Architecture
                 <span>System Diagrams</span>
             </a>
+            <a href="/view" class="nav-btn btn-arch">
+                View Database
+                <span>System Diagrams</span>
+            </a>
         </div>
     </main>
 
