added more cushion for the failover and better logging in the DB
added more cushion for the failover and better logging in the DB

--- a/local/code/html/index.html
+++ b/local/code/html/index.html
@@ -419,9 +419,9 @@
         </div>
 
         <footer>
-            <div style="margin-bottom: 20px;">
+            <div>
                 View as:
-                <a href="/" style="color: #fff; margin-right: 10px; font-weight: bold;">Home</a>
+                <a href="/home" style="color: #fff; margin-right: 10px; font-weight: bold;">Home</a>
                 <a href="/save?data={{DATA}}&template=default" style="color: #fff; margin-right: 10px;">Design</a>
                 <a href="/save?data={{DATA}}&template=space" style="color: #fff; margin-right: 10px;">Space</a>
                 <a href="/save?data={{DATA}}&template=webgl" style="color: #fff; margin-right: 10px;">WebGL</a>
