--- a/local/code/html/landing.html
+++ b/local/code/html/landing.html
@@ -368,19 +368,19 @@
         </p>
 
         <div class="nav-grid">
-            <a href="/save?template=default" class="nav-btn btn-default">
+            <a href="/save?template=default&data=Design View" class="nav-btn btn-default">
                 Design View
                 <span>Standard Data Entry</span>
             </a>
-            <a href="/save?template=space" class="nav-btn btn-space">
+            <a href="/save?template=space&data=Space View" class="nav-btn btn-space">
                 Space View
                 <span>Cosmic Visualization</span>
             </a>
-            <a href="/save?template=webgl" class="nav-btn btn-webgl">
+            <a href="/save?template=webgl&data=WebGL View" class="nav-btn btn-webgl">
                 WebGL View
                 <span>3D Graphics Test</span>
             </a>
-            <a href="/save?template=architecture" class="nav-btn btn-arch">
+            <a href="/save?template=architecture&data=Architecture View" class="nav-btn btn-arch">
                 Architecture
                 <span>System Diagrams</span>
             </a>
