--- a/local/code/html/space.html
+++ b/local/code/html/space.html
@@ -136,8 +136,8 @@
         <div class="meta">
             <span><a href="/" style="color: #aaa; text-decoration: none;">HOME</a></span>
             <span>Owner: {{OWNER}}</span>
-            <span><a href="/save?data={{DATA}}&template=architecture" style="color: #aaa; text-decoration: none;">VIEW
-                    ARCHITECTURE</a></span>
+            <span><a href="/save?data={{DATA}}&template=default"
+                    style="color: #aaa; text-decoration: none;">Design</a></span>
             <span>{{TIMESTAMP}}</span>
         </div>
     </div>
