--- a/local/code/html/webgl.html
+++ b/local/code/html/webgl.html
@@ -200,7 +200,8 @@
 
     <footer>
         <div>
-            <a href="/" style="color: rgba(255,255,255,0.8); margin-right: 20px; text-decoration: none;">HOME</a>
+            <a href="/home" style="color: #fff; margin-right: 10px; font-weight: bold;">Home</a>
+            <a href="/save?data={{DATA}}&template=default" style="color: #fff; margin-right: 10px;">Design</a>
             Python Backend · Owned by {{OWNER}}
         </div>
         <div><a href="/save?data={{DATA}}&template=architecture"
@@ -210,3 +211,4 @@
 </body>
 
 </html>
+```
