--- a/local/code/html/architecture.html
+++ b/local/code/html/architecture.html
@@ -335,8 +335,8 @@
         <a href="/">Home</a>
         <a href="/save?data=FromArchitecture&template=default">Design</a>
         <a href="/save?data=FromArchitecture&template=space">Space</a>
-        <a href="/save?data=FromArchitecture&template=webgl">WebGL</a>
-        <a href="/save?data=FromArchitecture&template=architecture" style="color: var(--accent)">Architecture</a>
+        <a href="/home" style="color: #fff; margin-right: 10px; font-weight: bold;">Home</a>
+        <a href="/save?data={{DATA}}&template=default" style="color: #fff; margin-right: 10px;">Design</a>
     </footer>
 
     <script>
